# dotfiles

./: .gitignore  .gitmodules  README.md  dot_Brewfile  dot_p10k.zsh  dot_vimrc  dot_zshrc  install_packages.py  install_packages_mac.sh  install_packages_ubuntu_server.sh  setup.py
.dotter/: global.toml  mac.template.toml  mac.toml  ubuntu.template.toml  ubuntu.toml
dot_oh-my-zsh/custom/: custom_management.zsh  network.zsh  utils.zsh
dots/aerospace/: aerospace.toml
dots/alacritty/: config.toml  config.yml  monokai_pro.yaml
dots/codex/: auth.json  config.toml
dots/fish/: config.fish  zellij.fish
dots/git/: gitconfig
dots/helix/: config.toml
dots/homebrew/: Brewfile
dots/skhd/: skhdrc
dots/vim/: vimrc
dots/warp/: keybindings.yaml
dots/zsh/: zshrc  (+2 more)
dotspy/: config.py  packages.py  register.py  utils.py
field_dotfiles/: config.py  install.py  linux_install.py  mac_install.py  utils.py
mackup/: .Brewfile  .gitconfig  .mackup.cfg  .p10k.zsh  .profile  .skhdrc  .tmux.conf  .tmux.conf.local  .vimrc  .yabairc  .zshenv  .zshrc
raycast_scripts/: README.md  pyproject.toml
raycast_scripts/scripts/: flush-dns.sh  list-git-config.sh  yabai-focus-east.sh  yabai-focus-north.sh  yabai-focus-south.sh  yabai-focus-west.sh  yabai-maximize.sh  yabai-move-east.sh  yabai-move-north.sh  yabai-move-south.sh  yabai-move-west.sh  yabai-resize-down.sh  yabai-resize-left.sh  yabai-resize-right.sh  yabai-resize-up.sh  yabai-swap-east.sh  yabai-swap-north.sh  yabai-swap-south.sh  yabai-swap-west.sh  yabai-toggle-float.sh
raycast_scripts/src/raycast_scripts/: __init__.py
(+33 files in other folders)
