[project]
name = "raycast-scripts"
version = "0.1.0"
description = "Scripts for raycast"
readme = "README.md"
authors = [{ name = "Kuangye Chen", email = "chen.kuangye@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
